--- a/index.html
+++ b/index.html
@@ -15,12 +15,47 @@
 
 </head>
 <body>
+<header>
+    <h1>Todo list</h1>
+</header>
+<main>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Wybierz motyw strony</h3>
+            <div id="colors" class="row">
+                <div class="color col-sm-4 col-md-2 d-none"></div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Lista rzeczy do zrobienia</h3>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <div id="todos" class="d-flex flex-wrap">
+                        <div class="todo d-none w-100">
+                            <div class="d-flex">
+                                <div class="todo__indicator">
+                                    <div class="todo__indicator__bg"></div>
+                                    <div class="todo__indicator__inside todo__indicator__active"></div>
+                                </div>
+                                <div class="todo__content d-flex align-items-center"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="chart"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
 
-
-
+</footer>
 
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
