--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="row">
         <div class="col-sm-12">
             <h3>Lista rzeczy do zrobienia</h3>
+            <button id="prev-button" class="btn btn-dark">Poprzedni</button>
+            <button id="next-button" class="btn btn-dark">Następny</button>
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <div id="todos" class="d-flex flex-wrap">
@@ -43,7 +45,14 @@
                             </div>
                         </div>
                     </div>
-                    <div id="chart"></div>
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <div class="chart">
+                        <canvas id="barChart"></canvas>
+                    </div>
+                    <div class="chart">
+                        <canvas id="pieChart"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
@@ -56,6 +65,7 @@
 <script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script src="js/IdsArray.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
