--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pl">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,58 +15,61 @@
     <link rel="stylesheet" href="css/main.css">
 
 </head>
+
 <body>
-<header>
-    <h1>Todo list</h1>
-</header>
-<main>
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>Wybierz motyw strony</h3>
-            <div id="colors" class="row">
-                <div class="color col-sm-4 col-md-2 d-none"></div>
+    <header>
+        <h1>Todo list</h1>
+    </header>
+    <main>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Wybierz motyw strony</h3>
+                <div id="colors" class="row">
+                    <div class="color col-sm-4 col-md-2 d-none"></div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h3>Lista rzeczy do zrobienia</h3>
-            <button id="prev-button" class="btn btn-dark">Poprzedni</button>
-            <button id="next-button" class="btn btn-dark">Następny</button>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <div id="todos" class="d-flex flex-wrap">
-                        <div class="todo d-none w-100">
-                            <div class="d-flex">
-                                <div class="todo__indicator">
-                                    <div class="todo__indicator__bg"></div>
-                                    <div class="todo__indicator__inside todo__indicator__active"></div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h3>Lista rzeczy do zrobienia</h3>
+                <button id="prev-button" class="btn btn-dark">Poprzedni</button>
+                <button id="next-button" class="btn btn-dark">Następny</button>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6">
+                        <div id="todos" class="d-flex flex-wrap">
+                            <div class="todo d-none w-100">
+                                <div class="d-flex">
+                                    <div class="todo__indicator">
+                                        <div class="todo__indicator__bg"></div>
+                                        <div class="todo__indicator__inside todo__indicator__active"></div>
+                                    </div>
+                                    <div class="todo__content d-flex align-items-center"></div>
                                 </div>
-                                <div class="todo__content d-flex align-items-center"></div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <div class="chart">
-                        <canvas id="barChart"></canvas>
-                    </div>
-                    <div class="chart">
-                        <canvas id="pieChart"></canvas>
+                    <div class="col-sm-12 col-lg-6">
+                        <div class="chart">
+                            <canvas id="barChart"></canvas>
+                        </div>
+                        <div class="chart">
+                            <canvas id="pieChart"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</main>
-<footer>
+    </main>
+    <footer>
+        <p>Posted by:Jan S., Jan O., Przemysław B.</p>
+        <p>Contact information: <a href="mailto: s216714@student.uek.krakow.pl ">Jan O. </a></p>
+    </footer>
 
-</footer>
-
-<script src="js/vendor/jquery.min.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
-<script src="js/IdsArray.js"></script>
-<script src="js/main.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="js/IdsArray.js"></script>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
