dodano adresy mailowe

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     </main>
     <footer>
         <p>Posted by:Jan S., Jan O., Przemysław B.</p>
-        <p>Contact information: <a href="mailto: s216714@student.uek.krakow.pl ">Jan O. </a></p>
+        <p>Contact information: <a href="mailto: s216830@student.uek.krakow.pl ">Jan S. </a>
+            <a href="mailto: s216714@student.uek.krakow.pl ">Jan O. </a>
+            <a href="mailto: s216417@student.uek.krakow.pl ">Przemysław B. </a> </p>
     </footer>
 
     <script src="js/vendor/jquery.min.js"></script>
