dodano ostylowanie headera

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-    <header>
-        <h1>Todo list</h1>
+    <header class="todo_header">
+        <a href="index.html"><h1>Todo list</h1></a>
     </header>
     <main>
         <div class="row">
